# NXP_fpgrowth

./: NXP_fpgrowth_interactive.ipynb  README.md  baseline.py  fp_growth.py  nxp_greedy_approach.ipynb  output.csv  output_all.csv  preprocess.py  pyproject.toml  requirements.txt  rule.csv
Datafile_0222/: testData_1.xlsx  testData_10.xlsx  testData_100.xlsx  testData_11.xlsx  testData_12.xlsx  testData_13.xlsx  testData_14.xlsx  testData_15.xlsx  testData_16.xlsx  testData_17.xlsx  testData_18.xlsx  testData_19.xlsx  testData_2.xlsx  testData_20.xlsx  testData_21.xlsx  testData_22.xlsx  testData_23.xlsx  testData_24.xlsx  testData_25.xlsx  testData_26.xlsx  testData_27.xlsx  testData_28.xlsx  testData_29.xlsx  testData_3.xlsx  testData_30.xlsx  testData_31.xlsx  testData_32.xlsx  testData_33.xlsx  testData_34.xlsx  testData_35.xlsx  testData_36.xlsx  testData_37.xlsx  testData_38.xlsx  testData_39.xlsx  testData_4.xlsx  testData_40.xlsx  testData_41.xlsx  testData_42.xlsx  testData_43.xlsx  testData_44.xlsx  (+60 more)
Result/: Baseline_similars_result.json  ent_emb.csv  rankingResult.json  rel_emb.csv
reference_result/: test_fail_result.json  test_file_score_dic.json
